<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/menu_search" />

        <item
            android:id="@+id/nav_films"
            android:icon="@drawable/ic_menu_films"
            android:title="@string/menu_films" />
        <item
            android:id="@+id/nav_actors"
            android:icon="@drawable/ic_menu_actors"
            android:title="@string/menu_actors" />
        <item
            android:id="@+id/nav_directors"
            android:icon="@drawable/ic_menu_directors"
            android:title="@string/menu_directors" />



    </group>

</menu>
