<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.imdb.imdb_api.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_films"
        android:name="com.imdb.imdb_api.ui.films.FilmsFragment"
        android:label="@string/menu_films"
        tools:layout="@layout/fragment_database" />
    <fragment
        android:id="@+id/nav_directors"
        android:name="com.imdb.imdb_api.ui.directors.DirectorsFragment"
        android:label="@string/menu_directors"
        tools:layout="@layout/fragment_database" />
    <fragment
        android:id="@+id/nav_actors"
        android:name="com.imdb.imdb_api.ui.actors.ActorsFragment"
        android:label="@string/menu_actors"
        tools:layout="@layout/fragment_database" />
    <fragment
        android:id="@+id/nav_search"
        android:name="com.imdb.imdb_api.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/nav_connection_error"
        android:name="com.imdb.imdb_api.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/nav_film_detail"
        android:name="com.imdb.imdb_api.ui.films.filmDetail.DetailFilmFragment"
        android:label="@string/menu_films"
        tools:layout="@layout/fragment_detail_film"/>

</navigation>